--- a/soundscape_project/templates/soundmap/index.html
+++ b/soundscape_project/templates/soundmap/index.html
@@ -1,13 +1,52 @@
 <!DOCTYPE html>
 
+{% load static %}
+
 <html>
 	<head>
-		<title>Soundscape</title>
-	</head>
+	    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+	    <meta charset="utf-8"/>
+        <link rel="stylesheet" href="{% static "style.css" %}" />
+        <script src="{% static "jquery-1.11.1.js" %}"></script>
 
-	<body>
-		<h1>Welcome to Soundscape!</h1>
+	    <style type="text/css">
+	      html { height: 100% }
+	      body { height: 100%; margin: 0; padding: 0 }
+	      #map-canvas { height: 100% }
+	    </style>
 
-	</body>
+	    <script src="{% static "sensitiveInfo.js" %}"></script>
+	    
+	    <script type="text/javascript"
+	      src="https://maps.googleapis.com/maps/api/js?key=".concat(mapKey)>
+	    </script>
+	    
+	    <script type="text/javascript" src="{% static "map.js" %}"></script>
+ 	</head>
+
+
+  <body>
+  	<header>
+  		<h1> Soundscape </h1>
+  	</header>	
+	
+	<div id="content">    
+	    <div id="mapContainer">
+	    	<div id="map-canvas"/>
+	    </div>
+
+	    <aside id="songTable">
+	    	<ul>
+	    		<li> No songs to play at this time </li>
+	    	</ul>
+	    </aside>
+
+	</div>
+
+	<footer>
+		<p>&copy; 2014 Ian Char and Tommy Fan</p>
+	</footer>
+
+  </body>
 
 </html>
