Now when you click somewhere on a map a marker is added

--- a/soundscape_project/templates/soundmap/index.html
+++ b/soundscape_project/templates/soundmap/index.html
@@ -40,6 +40,7 @@
 	    		<li> No songs to play at this time </li>
 	    	</ul>
 	    </aside>
+	    <button onclick="placeCurrLocationMarker">Place a marker</button>
 
 	</div>
 
