Can now place a marker or get current location

--- a/soundscape_project/templates/soundmap/index.html
+++ b/soundscape_project/templates/soundmap/index.html
@@ -40,7 +40,8 @@
 	    		<li> No songs to play at this time </li>
 	    	</ul>
 	    </aside>
-	    <button onclick="placeCurrLocationMarker">Place a marker</button>
+	    <button onclick="enablePlacing()">Place a marker</button>
+	    <button onclick="placeCurrentLocationMarker()">Place a marker at current location</button>
 
 	</div>
 
