Got some marker highlight info going

--- a/soundscape_project/templates/soundmap/index.html
+++ b/soundscape_project/templates/soundmap/index.html
@@ -52,6 +52,7 @@
 	    </aside>
 	    <button onclick="enablePlacing()">Place a marker</button>
 	    <button onclick="placeCurrentLocationMarker()">Place a marker at current location</button>
+	    <button onclick="test()">Test</button>
 
 	</div>
 
