Got SoundCloud player to appear when a marker is clicked

--- a/soundscape_project/static/style.css
+++ b/soundscape_project/static/style.css
@@ -19,6 +19,13 @@ header {
 	width: 100em;
 }
 
+iframe {
+	position: relative;
+	margin-top: 10em;
+	width: 27.5em;
+	height: 10.25em;
+}
+
 aside > a {
 	margin-left: 1em;
 }
