--- a/soundscape_project/templates/soundmap/index.html
+++ b/soundscape_project/templates/soundmap/index.html
@@ -19,8 +19,7 @@
 	    <script type="text/javascript"
 	      src="https://maps.googleapis.com/maps/api/js?key=".concat(mapKey)>
 	    </script>
-	    
-	    <script type="text/javascript" src="{% static "map.js" %}"></script>
+	    <script src="http://connect.soundcloud.com/sdk.js"></script>
  	</head>
 
 
@@ -58,6 +57,10 @@
 		    	</ul>
 		    {% endif %}
 		    <a href = "/soundmap/add_song/">Add a new song</a>
+
+		    <div id="soundcloudPlayer">
+		    	<p>Create a Marker and then click on it to hear a test song </p>
+		    </div>
 	    </aside>
 
 	    <button onclick="enablePlacing()">Place a marker</button>
@@ -67,9 +70,13 @@
 	</div>
 
 	<footer>
+		<p> Powered by Google Maps and SoundCloud </p>
 		<p>&copy; 2014 Ian Char and Tommy Fan</p>
 	</footer>
 
+	<script type="text/javascript" src="{% static "soundCloudMain.js" %}"></script>
+	<script type="text/javascript" src="{% static "map.js" %}"></script>
+  
   </body>
 
 </html>
