--- a/soundscape_project/templates/soundmap/index.html
+++ b/soundscape_project/templates/soundmap/index.html
@@ -59,7 +59,7 @@
 		    <a href = "/soundmap/add_song/">Add a new song</a>
 
 		    <div id="soundcloudPlayer">
-		    	<p>Create a Marker and then click on it to hear a test song </p>
+		    	<p>Click on a marker to hear a song!</p>
 		    </div>
 	    </aside>
 
