--- a/soundscape_project/templates/soundmap/index.html
+++ b/soundscape_project/templates/soundmap/index.html
@@ -31,16 +31,15 @@
 	        Welcome, {{ user.username }}!</br>
 	        <a href="/soundmap/logout/">Logout</a>
 	       	{% else %}
+	       	<h3>Welcome to Soundscape!</h3>
 	        <a href="/soundmap/register/">Register</a>
 	        <a href="/soundmap/login/">Login</a>
 	       	{% endif %}
        </div>
 
-  		
   	</header>	
 	
 	<div id="content">
-		
 	    <div id="mapContainer">
 	    	<div id="map-canvas"/>
 	    </div>
