--- a/soundscape_project/static/css/base_style.css
+++ b/soundscape_project/static/css/base_style.css
@@ -4,7 +4,7 @@ body {
 	background-color: #10bb5f;
 }
 
-h1 {
+.brand {
 
 	font-size: 50px;
 	color: #34c376;
@@ -15,12 +15,11 @@ h1 {
 	background-color:#FFFFFF;
 	position: static;
 	display: block;
-	border: thick solid #1487a7;
+	border: 0.41em solid #1487a7;
 	margin-bottom: 1em;
-	margin-left: 5%;
+	margin-left: 3.5%;
 	padding-left: 2em;
 	z-index: 2;
-	width: 95%;
 }
 
 #message {
@@ -29,20 +28,19 @@ h1 {
 }
 
 #content {
-	
 	position: static;
-	display: inline-block;
-	width: 95%;
-	margin-left: 5%;
-	background-color: #F1F1F1;
+	margin-left: 3.5%;
+	background-color: #FFFFFF;
 	border-bottom: thick solid #628484;
+	padding-left: 0;
+	padding-right: 0;
 
 }
 
 footer {
+	margin-top: 2em;
 	position: static;
 	float: clear;
-	width: 100%;
 	text-align: center;
 	color: #FFFFFF;
 }
