--- a/soundscape_project/templates/soundmap/index.html
+++ b/soundscape_project/templates/soundmap/index.html
@@ -17,9 +17,9 @@
 
 {% block body_block %}
 
-	    <div id="mapContainer"></div>
+	    <div class = "col-md-9" id="mapContainer"></div>
 
-	    <div id="songTable">
+	    <div class = "col-md-3" id="songTable">
 	    	{% if song_list %}
 	    		<ul>
 	    			{% for song in song_list %}
