Can play songs from the side menu

--- a/soundscape_project/templates/soundmap/index.html
+++ b/soundscape_project/templates/soundmap/index.html
@@ -24,7 +24,7 @@
 	    	{% if song_list %}
 	    		<ul>
 	    			{% for song in song_list %}
-	    			<li>{{song.name}} -- {{song.artist}}</li>
+	    			<li><a onclick = "playMusic('{{song.url}}')" id="{{song.artist}}">{{song.name}} -- {{song.artist}}</a></li>
 	    			{% endfor %}
 	    		</ul>
 	    	{% else %}
@@ -45,4 +45,6 @@
 	    <button onclick="test()">Test</button>
 	<script type="text/javascript" src="{% static "soundCloudMain.js" %}"></script>
 	<script type="text/javascript" src="{% static "map.js" %}"></script>
+	<script src="{% static "soundmap-ajax.js" %}"></script>
+
 {% endblock %}
