--- a/soundscape_project/templates/soundmap/index.html
+++ b/soundscape_project/templates/soundmap/index.html
@@ -16,13 +16,11 @@
 	    </script>
 	    <script src="http://connect.soundcloud.com/sdk.js"></script>
 	    <script type="text/javascript">
-	    	function my_callback(data) {
+	    	function populate_map_helper(data) {
 	    		var key;
 	    		for(key in data) {
 	    			var song = data[key];
-	    			console.log(song.artist);
-	    			console.log(song.name);
-	    			populate(song);
+	    			populate_map(song);
 	    		}
 	    	}
 	    </script>
@@ -56,7 +54,7 @@
 
 		<button onclick="enablePlacing()">Place a marker</button>
 	    <button onclick="placeCurrentLocationMarker()">Place a marker at current location</button>
-	    <button onclick="Dajaxice.soundmap.getMarkerInfo(my_callback);">Populate</button>
+	    <button onclick="Dajaxice.soundmap.getMarkerInfo(populate_map_helper);">Populate</button>
 	<script type="text/javascript" src="{% static "map.js" %}"></script>
 	<script src="{% static "soundmap-ajax.js" %}"></script>
 
