--- a/soundscape_project/templates/soundmap/base.html
+++ b/soundscape_project/templates/soundmap/base.html
@@ -17,21 +17,30 @@
 
 	<body>
 		<div class="container-fluid">
-			<div class="col-md-11" id="header">
-		  		<a class = "brand" href="/soundmap/"> Soundscape </a>
-		  		<div id = "message">
-		  			{% if user.is_authenticated %}
-			        <h3>Welcome, {{ user.username }}!</h3>
-			        <a href="/soundmap/logout/">Logout</a>
-			       	{% else %}
-			       	<h3>Welcome to Soundscape!</h3>
-			        <a href="/soundmap/register/">Register</a>
-			        <a href="/soundmap/login/">Login</a>
-			       	{% endif %}
-		       </div>
+			<nav class="navbar navbar-default navbar-static-top">
+				<div class="container-fluid">
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle" data-toggle-"collapse" data-target="#navbar-collapse">
+							<span class="sr-only"> Toggle Navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+				  		<a class = "navbar-brand" href="#"> Soundscape </a>
+		   			</div>
+				  		<div id = "message">
+				  			{% if user.is_authenticated %}
+					        <h3>Welcome, {{ user.username }}!</h3>
+					        <a href="/soundmap/logout/">Logout</a>
+					       	{% else %}
+					       	<h3>Welcome to Soundscape!</h3>
+					        <a href="/soundmap/register/">Register</a>
+					        <a href="/soundmap/login/">Login</a>
+					       	{% endif %}
+						</div>
+		   		</div>
+		  	</nav>
 
-		  	</div>
-			
 			<div class="col-md-11" id="content">
 				{% block body_block %}
 				{% endblock %}
@@ -39,7 +48,7 @@
 		
 			<footer class="col-md-12">
 				<p> Powered by Google Maps and SoundCloud </p>
-				<p>&copy; 2014 Ian Char and Tommy Fan</p>
+				<p>&copy; 2014 Ian Char and Lecheng Fan</p>
 			</footer>
 		</div>
 	</body>
