--- a/soundscape_project/templates/soundmap/register.html
+++ b/soundscape_project/templates/soundmap/register.html
@@ -25,7 +25,7 @@
 			<a href = "/soundmap/"> Return to the homepage. </a>
 		{% else %}
 
-		<form class="form-horizontal" role="form" id = "user_form" method = "post" action="/soundmap/register/" enctype = "multipart/form-data">
+		<form id = "user_form" method = "post" action="/soundmap/register/" enctype = "multipart/form-data">
 			{% csrf_token %}
 			<h1>Register here!</h1>
 			{% for field in user_form.visible_fields %}
