--- a/soundscape_project/static/css/base_style.css
+++ b/soundscape_project/static/css/base_style.css
@@ -3,6 +3,10 @@ body {
 	background-color: #10bb5f;
 }
 
+#navigation {
+	background-color: #FFFFFF;
+}
+
 #brand {
 	font-size: 50px;
 	color: #34c376;
