--- a/soundscape_project/templates/soundmap/add_song.html
+++ b/soundscape_project/templates/soundmap/add_song.html
@@ -6,40 +6,48 @@
 
 {% block head_block %}
     <link rel = "stylesheet" href=" {% static 'css/add_song_style.css' %}" />
+    <script type="text/javascript" src="{% static "map.js" %}"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            loadCoordinates();
+        });
+    </script>
 {% endblock %}
 
 {% block body_block %}
-<div class="container-fluid" id="container">
-    <div class="col-md-9" id="form">
-        <h1>Add a Song</h1>
+    <div class="container-fluid" id="container">
+        <div class="col-md-9" id="form">
+            <h1>Add a Song</h1>
 
-        <form id="song_form" method="post" action="/soundmap/add_song/">
+            <form id="song_form" method="post" action="/soundmap/add_song/">
 
-            {% csrf_token %}
-            {% for hidden in form.hidden_fields %}
-                {{ hidden }}
-            {% endfor %}
-
-            {% for field in form.visible_fields %}
-                {{ field.errors }}
-                {{ field.help_text }} </br>
-                {{ field }} </br>
-            {% endfor %}
-            </br>
-            <input class="btn btn-primary" type="submit" name="submit" value="Add Song" />
-        </form>
-    </div>
-
-    <div class = "col-md-3" id="songTable">
-        {% if song_list %}
-            <ul>
-                {% for song in song_list %}
-                <li>{{song.name}} -- {{song.artist}}</li>
+                {% csrf_token %}
+                {% for hidden in form.hidden_fields %}
+                    {{ hidden }}
                 {% endfor %}
-            </ul>
-        {% else %}
-            <p> No songs to play at this time </p>
-        {% endif %}
+
+                {% for field in form.visible_fields %}
+                    {{ field.errors }} </br>
+                    <label> {{ field.help_text }} </label>
+                    <input id="{{field.auto_id}}" class="form-control" size="30" type="{{field.field.widget.input_type}}" name="{{field.name}}" value="" placeholder="{{field.label}}"/>
+                {% endfor %}
+                </br>
+                <input class="btn btn-primary" type="submit" name="submit" value="Add Song"//>
+            </form>
+        </div>
+
+        <div class = "col-md-3" id="songTable">
+            {% if song_list %}
+                <ul>
+                    {% for song in song_list %}
+                    <li>{{song.name}} -- {{song.artist}}</li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                <p> No songs to play at this time </p>
+            {% endif %}
+        </div>
     </div>
-</div>
+
+
 {% endblock %}
