--- a/soundscape_project/templates/soundmap/base.html
+++ b/soundscape_project/templates/soundmap/base.html
@@ -7,10 +7,10 @@
 		<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 	    <meta charset="utf-8"/>
 	    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+	    <script src="{% static "jquery-1.11.1.js" %}"></script>
 	    {% block head_block %}
 		{% endblock %}
 		<link rel="stylesheet" href="{% static 'css/base_style.css' %}" />
-		<script src="{% static "jquery-1.11.1.js" %}"></script>
 		<title>Soundscape - {% block title %} Interactive Sound Map {% endblock %}</title>
 		
 	</head>
@@ -39,7 +39,7 @@
 		   				</ul>
 				  		<ul class="nav navbar-nav navbar-right" id="right-menu">
 				  			{% if user.is_authenticated %}
-					        	<li class="user-control"><form action="/soundmap/logout/"><input class="btn btn-default navbar-btn" type="submit" value = "Logout"></form></li>
+					        	<li class="user-control"><form action="/soundmap/logout/"><input class="btn btn-primary navbar-btn" type="submit" value = "Logout"></form></li>
 					       	{% else %}
 						       	<li class="user-control"><form action="/soundmap/register"><input class="btn btn-success navbar-btn" type="submit" value="Register"></form></li>
 						        <li class="user-control"><form action="/soundmap/login/"><input class="btn btn-primary navbar-btn" type="submit" value="Login"></form></li>
