--- a/soundscape_project/static/css/base_style.css
+++ b/soundscape_project/static/css/base_style.css
@@ -25,7 +25,7 @@ body {
 
 #header {
 	display: block;
-	margin-left: 4.167%;
+	margin-left: 4.167%;	/*1/24 of the total width on each side since the content takes up 11/12*/
 }
 
 #message {
@@ -35,12 +35,11 @@ body {
 
 #content {
 	position: static;
-	margin-left: 4.167%;
+	margin-left: 4.167%;	/*1/24 of the total width on each side since the content takes up 11/12*/
 	background-color: #FFFFFF;
 	border-bottom: thick solid #628484;
 	padding-left: 0;
 	padding-right: 0;
-
 }
 
 #info {
