--- a/soundscape_project/static/css/index_style.css
+++ b/soundscape_project/static/css/index_style.css
@@ -32,3 +32,21 @@ iframe {
 	max-width: 100%;
 	max-height: 100%;
 }
+
+/*CSS for JQuery UI dialog box*/
+input.text {
+	margin-bottom: 12px;
+	width: 95%;
+	padding: 0.4em;
+}
+
+fieldset {
+	padding:0;
+	border: 0;
+	margin-top:25px;
+}
+
+.validateTips {
+	border: 1px solid transparent;
+	padding: 0.3em;
+}
