--- a/soundscape_project/templates/soundmap/base.html
+++ b/soundscape_project/templates/soundmap/base.html
@@ -8,6 +8,8 @@
 	    <meta charset="utf-8"/>
 	    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
 	    <script src="{% static "jquery-1.11.1.js" %}"></script>
+		<script src="{% static "sensitiveInfo.js" %}"></script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=".concat(mapKey)></script>
 	    {% block head_block %}
 		{% endblock %}
 		<link rel="stylesheet" href="{% static 'css/base_style.css' %}" />
