--- a/soundscape_project/templates/soundmap/index.html
+++ b/soundscape_project/templates/soundmap/index.html
@@ -5,25 +5,27 @@
 {% load dajaxice_templatetags %}
 
 {% block head_block %} 
-		{% dajaxice_js_import %}
-		<link rel="stylesheet" href="{% static 'css/index_style.css' %}" />
-	    <script src="{% static "sensitiveInfo.js" %}"></script>
-	    <script type="text/javascript"
-	      src="https://maps.googleapis.com/maps/api/js?key=".concat(mapKey)>
-	    </script>
-	    <script src="http://connect.soundcloud.com/sdk.js"></script>
-	    <script type="text/javascript">
-	    	function populate_map_helper(data) {
-	    		var key;
-	    		for(key in data) {
-	    			var song = data[key];
-	    			populate_map(song);
-	    		}
-	    	}
-	    	jQuery(document).ready(function ($) {
-	    		Dajaxice.soundmap.getMarkerInfo(populate_map_helper);
-	    	});
-	    </script>
+	{% dajaxice_js_import %}
+	<link rel="stylesheet" href="{% static 'jquery-ui/jquery-ui.theme.min.css' %}"/>
+	<link rel="stylesheet" href="{% static 'css/index_style.css' %}" />
+    <script src="http://connect.soundcloud.com/sdk.js"></script>
+    <script src="{% static 'jquery-ui/jquery-ui.min.js' %}"></script>
+    <script type="text/javascript">
+    	function populate_map_helper(data) {
+    		var key;
+    		for(key in data) {
+    			var song = data[key];
+    			populate_map(song);
+    		}
+    	}
+    	jQuery(document).ready(function ($) {
+    		Dajaxice.soundmap.getMarkerInfo(populate_map_helper);
+    	});
+    </script>
+    <script type="text/javascript">
+    	var currentLocation;
+    </script>
+    <script src="{% static 'modal_form.js' %}"></script>
  {% endblock %}
 
 
@@ -34,7 +36,7 @@
     <div class = "col-md-3" id="songTable">
     	{% block side_block %}
     	{% if song_list %}
-    		<ul>
+    		<ul id = "playlist">
     			{% for song in song_list %}
     			<li><a onclick = "playMusic('{{song.url}}')" id="{{song.artist}}">{{song.name}} -- {{song.artist}}</a></li>
     			{% endfor %}
@@ -52,10 +54,26 @@
 	    </div>
     </div>
 
-	<button onclick="enablePlacing()">Place a marker</button>
+    <div id="dialog-form" title="Add a Song">
+    	<p class="validateTips"> All form fields are required. </p>
+            <form id="song_form" method="post" action="/soundmap/add_song/">
+
+                {% csrf_token %}
+                {% for hidden in form.hidden_fields %}
+                    {{ hidden }}
+                {% endfor %}
+
+                {% for field in form.visible_fields %}
+                    {{ field.errors }} </br>
+                    <label> {{ field.help_text }} </label>
+                    <input id="{{field.name}}" class="text ui-widget-content ui-corner-all" type="{{field.field.widget.input_type}}" name="{{field.name}}" value="" placeholder="{{field.label}}"/>
+                {% endfor %}
+                </br>
+                <input type="submit" tabindex="-1" />
+            </form>
+	</div>
+	<button id="addsong">Place a marker</button>
     <button onclick="placeCurrentLocationMarker()">Place a marker at current location</button>
-    <!-- <button onclick="Dajaxice.soundmap.getMarkerInfo(populate_map_helper);">Populate</button> -->
 	<script type="text/javascript" src="{% static "map.js" %}"></script>
-	<script src="{% static "soundmap-ajax.js" %}"></script>
 
 {% endblock %}
