--- a/soundscape_project/static/css/base_style.css
+++ b/soundscape_project/static/css/base_style.css
@@ -4,18 +4,19 @@ body {
 }
 
 #navigation {
-	background-color: #FFFFFF;
+	background: rgba(210, 255, 231, 0.8);
 }
 
 #brand {
-	font-size: 50px;
-	color: #34c376;
 	padding: 0;
+	margin-top: -5px;
+	font-size: 40px;
+	color: #34c376;
 	text-decoration: none;
 }
 .navbar-text {
 	margin-left: 2px;
-	margin-top: 5px;
+	margin-top: -5px;
 	margin-bottom: 5px;
 	font-size:16px;
 }
@@ -24,6 +25,7 @@ body {
 }
 
 #header {
+	margin-top: -0.45em;
 	display: block;
 	margin-left: 4.167%;	/*1/24 of the total width on each side since the content takes up 11/12*/
 }
@@ -34,6 +36,7 @@ body {
 }
 
 #content {
+	margin-top: 7em;
 	position: static;
 	margin-left: 4.167%;	/*1/24 of the total width on each side since the content takes up 11/12*/
 	background-color: #FFFFFF;
@@ -63,7 +66,7 @@ body {
 .user-control {
 	padding-left: 2em;
  	top: 50%;
- 	transform: translateY(50px);
+ 	transform: translateY(-50%);
 }
 
 footer {
