--- a/soundscape_project/templates/soundmap/base.html
+++ b/soundscape_project/templates/soundmap/base.html
@@ -10,6 +10,7 @@
 	    <script src="{% static "jquery-1.11.1.js" %}"></script>
 		<script src="{% static "sensitiveInfo.js" %}"></script>
 		<script src="https://maps.googleapis.com/maps/api/js?key=".concat(mapKey)></script>
+		<link href='http://fonts.googleapis.com/css?family=Overlock|Yellowtail|Tangerine|Forum|Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 	    {% block head_block %}
 		{% endblock %}
 		<link rel="stylesheet" href="{% static 'css/base_style.css' %}" />
